# tiny-rag-lab

./: .gitignore  AGENTS.md  CURRENT.md  README.md  pyproject.toml
.github/workflows/: deploy-website.yml
docs/: agent-brainstorming.md  agent-guidelines.md  architecture.md  current-task-template.md  file-structure.md  handoff-template.md  proposal.md  roadmap.md
docs/phases/: README.md  phase-1-naive-classic-rag.md  phase-1-taskboard.md  phase-1.5-retrieval-mechanics.md  phase-1.5-taskboard.md  phase-1.6-evaluation-harness.md  phase-1.6-taskboard.md  phase-1.7-observability.md  phase-1.7-taskboard.md  (+12 more)
scripts/: prepare_watsonx_docsqa.py
tests/: test_bm25.py  test_chunking.py  test_cli.py  test_cmd_ask.py  test_cmd_diagnose.py  test_cmd_eval.py  test_cmd_index_retrieve.py  test_cmd_retrieve.py  test_context.py  test_documents.py  test_embeddings.py  test_eval_metrics.py  test_eval_runner.py  test_failure.py  test_generation.py  test_hybrid.py  test_index_loader.py  test_index_writer.py  test_judge.py  test_judge_openai.py  test_models.py  test_openai_generator.py  test_persistence_roundtrip.py  test_prepare_watsonx_docsqa.py  test_prompting.py  test_reranker.py  test_reranker_cross_encoder.py  test_retrieval.py  test_sentence_transformer_embedder.py  test_smoke.py  test_trace.py
tiny_rag_lab/: __init__.py  bm25.py  chunking.py  cli.py  context.py  documents.py  embeddings.py  eval.py  failure.py  generation.py  hybrid.py  index_loader.py  index_writer.py  judge.py  models.py  prompting.py  reranker.py  retrieval.py  trace.py
website/: index.html
(+37 files in other folders)
